Fix content jump due to html scrollbar
Having overflow: scroll was causing an always-visible scrollbar,
and extra padding at the right when opening modals

The tooltip disabling does not appear to do anything, and isn't
updated for gl-tooltip so I assume it can go.

Updated drop_in_dropzone helper to prepend to the body instead of
append, this doesn't actually happen in real app

--- a/app/assets/stylesheets/framework/layout.scss
+++ b/app/assets/stylesheets/framework/layout.scss
@@ -1,11 +1,3 @@
-html {
-  overflow-y: scroll;
-
-  &.touch .tooltip {
-    display: none !important;
-  }
-}
-
 body {
   // Improves readability for dyslexic users; supported only in Chrome/Safari so far
   // scss-lint:disable PropertySpelling
